--- a/app/src/main/res/values-mdpi/strings.xml
+++ b/app/src/main/res/values-mdpi/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple Player For Twitch</string>
+    <string name="app_name">Slitch</string>
 
     <string name="TWITCH">TWITCH</string>
 
